whitespace fix

--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,7 @@ img {
     font-weight: 80;
     color: black;
 }
+
+.citation {
+    font-size: 10px;
+}
